fix: increase collapse toggle z-index and fix icon path issues

--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   position: absolute;
-  z-index: 10;
+  z-index: 100;
   top: 6px;
   right: 6px;
   height: 30px;
